AtlasOfLivingAustralia/biocollect#682 added feature to show more facets changed font family for configurable templates due to alignment issues with bootstrap changed max facet limit to 15

--- a/web-app/css/project-finder.css
+++ b/web-app/css/project-finder.css
@@ -206,9 +206,6 @@ input[type=checkbox] {
     width: 90%;
 }
 
-.vertical-align-top{
-    vertical-align: top;
-}
 
 button.btn.btn-text-left{
     text-align: left;
